# Hair-DER

./: .gitignore  CMakeLists.txt  readme.md
assets/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  getTransform.py  sample-1.xml  sample-50.xml  sample.py  sample.xml
cmake/: FindANTTWEAKBAR.cmake  FindGLM.cmake  FindLIBPNG.cmake
include/png++/: error.hpp
src/: BendingForce.cpp  Camera.cpp  Camera.h  CompliantImplicitEuler.cpp  CompliantImplicitEuler.h  DependencyNode.h  ElasticStrandUtils.cpp  ElasticStrandUtils.h  Force.cpp  Force.h  ForceAccumulator.h  GUI.h  MathDefs.h  MathUtilities.cpp  MathUtilities.h  ModelParameters.h  PBDCollisionSolver.cpp  PBDCollisionSolver.h  PositionOrientationDynamics.cpp  PositionOrientationDynamics.h  Scene.cpp  Scene.h  SceneStepper.cpp  SceneStepper.h  Shader.cpp  SimpleGravityForce.cpp  SimpleGravityForce.h  Simulator.cpp  Simulator.h  StrandForce.cpp  StrandForce.h  StrandMathDef.h  StrandParameters.h  StretchingForce.cpp  StretchingForce.h  ThreadUtils.h  TimingUtilities.cpp  TimingUtilities.h  TwistingForce.h  ViscousOrNotViscous.h  (+1 more)
src/DER/: Definitions.h  StrandForce.cpp  StrandForce.h
src/DER/Dependencies/: DependencyNode.h  ElasticityParameters.h
src/DER/Forces/: StretchingForce.cpp
src/OpenGL/: ColorFragmentShader.fragmentshader  Shader.h
